# thermalright-lcd-control

./: .continueignore  .gitattributes  .gitignore  AGENTS.md  Makefile  README.md  build.sh  create_package.sh  install.sh  pyproject.toml  run_gui.sh  run_service.sh  test_graph_widgets.py  test_metric_manager.py  uninstall.sh
.continue/rules/: always-use-absolute-paths.md  paths.md
debian/: postinst  preinst
doc/: CHANGELOG.md  CONFIG_SAVING_BUG_FIX.md  COORDINATE_CONVERSION_BUG_ANALYSIS.md  GRAPH_BREAKING_CHANGES.md  HOWTO.md  IMPORT_SYSTEM_MODERNIZATION.md  PATH_PORTABILITY_IMPLEMENTATION.md  PHASE_1_COMPLETE.md  PREVIEW_BACKGROUND_COLOR_FIX.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE_AND_WIDGET_PALETTE_IMPLEMENTATION.md  README.md  SAVE_APPLY_BUTTONS_UPDATE.md  TEXT_COLOR_PICKER_FIX.md  THEME_AND_MEDIA_PATHS.md  THEME_LOADING_IMPLEMENTATION.md  UNIFIED_WIDGET_MIGRATION_PLAN.md  USB_DEVICE_WORKING_STATE.md  USB_DISPLAY_BLACK_SCREEN_FIX.md  VIDEO_BACKGROUND_PREVIEW_FIX.md  WIDGET_LIVE_DATA_INTEGRATION.md  WIDGET_POSITIONING_FIXES.md  WIDGET_POSITIONING_OFFSET_ISSUE.md  WIDGET_VISIBILITY_RENDERING_FIX.md  output.txt  output_clean.txt
releases/: thermalright-lcd-control-1.2.0-1.noarch.rpm  thermalright-lcd-control_1.2.0_all.deb
resources/: gui_config.yaml  thermalright-lcd-control.desktop  thermalright-lcd-control.service
scripts/: collect_preview_debug.sh  thermalright-lcd-control.desktop
tests/: test_generator_layer_order.py  test_geometry_utils.py  test_preview_pixmap_conversion.py  test_shape_global_drag_delta.py  test_shape_padding.py  test_shape_save_load_roundtrip.py
(+97 files in other folders)
