
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "thermalright-lcd-control"
version = "1.4.1"
description = "Linux Thermal rigth lcd display control"
authors = [{ name = "REJEB BEN REJEB", email = "benrejebrejeb@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = "~=3.13.7"
dependencies = [
    "PySide6>=6.10.0",
    "hid>=1.0.8",
    "psutil>=7.1.3",
    "opencv-python>=4.12.0.88",
    "pyusb>=1.3.1",
    "pillow>=12.0.0",
    "pyyaml>=6.0.2",
]

[project.scripts]
thermalright-lcd-control-gui = "thermalright_lcd_control.main_gui:main"
thermalright-lcd-control-service = "thermalright_lcd_control.service:main"

# Configuration Hatchling
[tool.hatch.build.targets.wheel]
packages = ["src/thermalright_lcd_control"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
